--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.AssociatedProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.AssociatedProducts.cshtml
@@ -64,7 +64,7 @@
 
                     	$(document).on('click', '#AddNewAssociatedProductButton', function () {
                         	$({}).entityPicker('loadDialog', {
-                            	url: '@Url.Action("EntityPicker", "Common", new { area = "" })',
+                            	url: '@Url.Action("Picker", "Entity", new { area = "" })',
                         		caption: '@T("Admin.Catalog.Products.AssociatedProducts.AddNew")',
                         		disableIf: 'GroupedProduct',
                         		onLoadDialogBefore: function () {
