--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.BundleItems.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.BundleItems.cshtml
@@ -167,7 +167,7 @@
 		// Add new bundle item
 		$(document).on('click', '#AddNewBundleItemButton', function () {
 			$({}).entityPicker('loadDialog', {
-				url: '@Url.Action("EntityPicker", "Common", new { area = "" })',
+				url: '@Url.Action("Picker", "Entity", new { area = "" })',
 				caption: '@T("Admin.Catalog.Products.BundleItems.AddNew")',
 				disableIf: 'notSimpleProduct',
 				onLoadDialogBefore: function () {
