--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
@@ -606,7 +606,7 @@
 		// add new product
 		$(document).on('click', '#AddNewProductButton', function () {
 			$({}).entityPicker('loadDialog', {
-				url: '@Url.Action("EntityPicker", "Common", new { area = "" })',
+				url: '@Url.Action("Picker", "Entity", new { area = "" })',
 				caption: '@T("Admin.Catalog.Categories.Products.AddNew")',
 				onLoadDialogBefore: function () {
 					$('#AddNewProductButton').button('loading').prop('disabled', true);
