Added options to include option names of specification and product attributes in the search index

--- a/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
@@ -125,6 +125,15 @@
 				@Html.ValidationMessageFor(model => model.FacetSorting)
 			</td>
 		</tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.IndexOptionNames)
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.IndexOptionNames)
+                @Html.ValidationMessageFor(model => model.IndexOptionNames)
+            </td>
+        </tr>
     </table>
 
 	<script type="text/javascript">
