--- a/src/Presentation/SmartStore.Web/Administration/Views/ProductAttribute/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ProductAttribute/_CreateOrUpdate.cshtml
@@ -127,12 +127,21 @@
 				@Html.ValidationMessageFor(model => model.FacetTemplateHint)
 			</td>
 		</tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.IndexOptionNames)
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.IndexOptionNames)
+                @Html.ValidationMessageFor(model => model.IndexOptionNames)
+            </td>
+        </tr>
 	</table>
 
 	<script type="text/javascript">
 		$(document).ready(function () {
 
-			// allow filtering changed
+			// Allow filtering changed.
 			$('#@(Html.FieldIdFor(x => x.AllowFiltering))').change(function () {
 				$('#ProductAttributeTable').find('.allow-filtering').toggle($(this).is(':checked'));
 			}).trigger('change');
