--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/CatalogMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/CatalogMenu.cshtml
@@ -3,6 +3,11 @@
 
 @{
     Layout = "";
+
+    var cutOffItems = Model.Root.Children
+        .Where(x => x.Value.Id == null && x.GetMetadata<bool>("spare", false))
+        .ToList();
+
 }
 
 <div class="megamenu simple">
@@ -13,9 +18,13 @@
     @foreach (var node in Model.Root.Children)
     {
         <div id="dropdown-menu-@node.Value.EntityId" data-id="@node.Value.EntityId">
-             @CreateDrilldownMenu(node.Children, true)
+            @CreateDrilldownMenu(node.Children, true)
         </div>
     }
+
+    <div id="dropdown-menu--1" data-id="-1">
+        @CreateDrilldownMenu(cutOffItems, true)
+    </div>
 </div>
 
 @helper CreateDrilldownMenu(IEnumerable<TreeNode<MenuItem>> nodes, bool isRoot)
