Getting started connecting translate.smartstore.com

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1677,6 +1677,35 @@ table.payment-method-features td {
 	}
 }
 
+/* Language list
+-------------------------------------------------------------- */
+.language-list {
+    td:last-child {
+        width: 200px;
+    }
+    .flag-icon {
+        margin: 0 4px 2px 0;
+        vertical-align: middle;
+    }
+}
+
+.available-plugin-resources {
+    .item {
+        margin-bottom: 10px;
+
+        .icon {
+	        float: left;
+	        width: 48px;
+            max-width: 48px;
+            margin: 2px 8px 0 0;
+        }
+        .data {
+            box-sizing: border-box;
+            margin-left: 10px;
+        }
+    }
+}
+
 //
 // Choice Boxes
 // TODO: (mc) DELETE this stuff after SASSifying the backend theme,
