--- a/src/Presentation/SmartStore.Web/Administration/Views/Language/Partials/AvailablePluginResources.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Language/Partials/AvailablePluginResources.cshtml
@@ -3,9 +3,9 @@
 <div class="available-plugin-resources">
     @foreach (var plugin in Model)
     {
-        <div class="item clearfix">
-            <img class="icon" src="@Url.Content(plugin.IconUrl)" />
-            <div class="data">
+        <div class="item clearfix" style="margin-bottom: 10px;">
+            <img class="icon" src="@Url.Content(plugin.IconUrl)" style="float: left; width: 48px; max-width: 48px; margin: 2px 8px 0 0;" />
+            <div class="data" style="box-sizing: border-box; margin-left: 10px;">
                 <div>
                     @plugin.FriendlyName.NaIfEmpty()
                 </div>
