--- a/src/Presentation/SmartStore.Web/Views/Entity/Partials/Picker.List.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Entity/Partials/Picker.List.cshtml
@@ -40,7 +40,7 @@
 					<div class="text-truncate">
 						@if (item.Published.HasValue)
 						{
-							<i class="published fa @(item.Published.Value ? "fa-globe" : "fa-eye-slash") xicon-active-@item.Published.Value.ToString().ToLower()" title="@(item.Published.Value ? Model.PublishedString : Model.UnpublishedString)"></i>
+							<i class="published fa @(item.Published.Value ? "fa-globe" : "fa-eye-slash") xicon-active-@item.Published.Value.ToString().ToLower()" title="@(item.Published.Value ? T("Common.Published") : T("Common.Unpublished"))"></i>
 						}
 						<span class="summary" title="@item.SummaryTitle">@item.Summary</span>
 					</div>
